fixed col gap issue

--- a/wp-content/themes/rutgers/assets/src/css/inc/_global.pcss
+++ b/wp-content/themes/rutgers/assets/src/css/inc/_global.pcss
@@ -464,6 +464,9 @@ div.ta-staff-block {
 .ta-services-columns.is-layout-flex {
   gap: var(--wp--preset--spacing--sp-base);
 }
+.ta-services-columns.ta-services-columns-with-blank-col{
+  gap: var(--wp--preset--spacing--sp-0);
+}
 .ta-services-columns-without-btn {
   .ta-info-block-small {
     @apply max-md:!pb-sp-base !pb-sp-inner;
